--- a/web/index.html
+++ b/web/index.html
@@ -32,6 +32,7 @@
 	<link rel="stylesheet" href="/css/themes/teal-theme.css">
 	<link rel="stylesheet" href="/css/themes/yellow-theme.css">
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="/css/style.css" rel="stylesheet">
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-aria.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-animate.min.js"></script>
