--- a/web/checklist.html
+++ b/web/checklist.html
@@ -1,66 +1,37 @@
 <md-toolbar md-theme="grey">
-	<h2 class="md-toolbar-tools">URL & Date</h2>
+	<h2 class="md-toolbar-tools">{{checklistItems.websiteInfo.name}}</h2>
 </md-toolbar>
 <md-content class="md-padding">
 	<form>
 		<div layout="row">
-			<md-text-float label="URL" ng-model=""></md-text-float>
-			<md-text-float label="Date" ng-model=""></md-text-float>
+			<div ng-repeat="item in checklistItems.websiteInfo.subItems">
+				<md-tooltip class="tooltip-full-text"></md-tooltip>
+				<md-text-float label="{{item.name}}" ng-model="item.model" ng-click="showDesc($event, item.name, item.desc)" layout-padding></md-text-float>
+			</div>
 		</div>
 	</form>
 </md-content>
 <md-toolbar md-theme="grey">
-	<h2 class="md-toolbar-tools">Testing Offers</h2>
+	<h2 class="md-toolbar-tools">{{checklistItems.pageTests.name}}</h2>
 </md-toolbar>
 <md-content class="md-padding">
 	<form>
-		<div layout="row">
-			<md-text-float label="Contact Us" ng-model=""></md-text-float>
-			<md-text-float label="Compliance" ng-model=""></md-text-float>
-			<md-text-float label="Popunder" ng-model=""></md-text-float>
-			<md-text-float label="Mil" ng-model=""></md-text-float>
-		</div>
-		<div layout="row">
-			<md-text-float label="Reject" ng-model=""></md-text-float>
-			<md-text-float label="Reject Login" ng-model=""></md-text-float>
-			<md-text-float label="Bad State" ng-model=""></md-text-float>
-			<md-text-float label="Chat" ng-model=""></md-text-float>
-		</div>
-		<div layout="row">
-			<md-text-float label="Unsold" ng-model=""></md-text-float>
-			<md-text-float label="Sold" ng-model=""></md-text-float>
-			<md-text-float label="Prepop" ng-model=""></md-text-float>
-			<md-text-float label="Login" ng-model=""></md-text-float>
-		</div>
-		<div layout="row">
-			<md-text-float label="Login Edit" ng-model=""></md-text-float>
-			<md-text-float label="Mobile" ng-model=""></md-text-float>
-			<md-text-float label="Mobile Login" ng-model=""></md-text-float>
-			<md-text-float label="Pixel Test" ng-model=""></md-text-float>
-		</div>
-		<div layout="row">
-			<md-text-float label="Custom 404" ng-model=""></md-text-float>
-			<md-text-float label="Creative" ng-model=""></md-text-float>
-			<md-text-float label="Firefox" ng-model=""></md-text-float>
-			<md-text-float label="IE" ng-model=""></md-text-float>
-		</div>
-		<div layout="row">
-			<md-text-float label="Chrome" ng-model=""></md-text-float>
-			<md-text-float label="Safari" ng-model=""></md-text-float>
-		</div>
+		<div layout"row" layout-wrap layout-fill>
+			<div ng-repeat="item in checklistItems.pageTests.subItems">
+				<md-text-float label="{{item.name}}" ng-model="item.model" ng-click="showDesc($event, item.name, item.desc)" layout-padding flex></md-text-float>
+			</div>
 		</div>
 	</form>
 </md-content>
 <md-toolbar md-theme="grey">
-	<h2 class="md-toolbar-tools">List Management</h2>
+	<h2 class="md-toolbar-tools">{{checklistItems.listManagement.name}}</h2>
 </md-toolbar>
 <md-content class="md-padding">
 	<form>
 		<div layout="row">
-			<md-text-float label="Roi-short" ng-model=""></md-text-float>
-			<md-text-float label="Roi-unsold" ng-model=""></md-text-float>
-			<md-text-float label="Roi-sold" ng-model=""></md-text-float>
-			<md-text-float label="Roi-milbdst" ng-model=""></md-text-float>
+			<div ng-repeat="item in checklistItems.listManagement.subItems">
+				<md-text-float label="{{item.name}}" ng-model="item.model" ng-click="showDesc($event, item.name, item.desc)" layout-padding></md-text-float>
+			</div>
 		</div>
 	</form>
 </md-content>
