--- a/web/checklist.html
+++ b/web/checklist.html
@@ -1,41 +1,6 @@
-<md-toolbar md-theme="grey">
-	<h2 class="md-toolbar-tools">{{checklistItems.websiteInfo.name}}</h2>
-</md-toolbar>
-<md-content class="md-padding">
-	<form>
-		<div layout="row">
-			<div ng-repeat="item in checklistItems.websiteInfo.subItems">
-				<md-tooltip class="tooltip-full-text"></md-tooltip>
-				<md-text-float label="{{item.name}}" ng-model="item.model" ng-click="showDesc($event, item.name, item.desc)" layout-padding></md-text-float>
-			</div>
-		</div>
-	</form>
-</md-content>
-<md-toolbar md-theme="grey">
-	<h2 class="md-toolbar-tools">{{checklistItems.pageTests.name}}</h2>
-</md-toolbar>
-<md-content class="md-padding">
-	<form>
-		<div layout"row" layout-wrap layout-fill>
-			<div ng-repeat="item in checklistItems.pageTests.subItems">
-				<md-text-float label="{{item.name}}" ng-model="item.model" ng-click="showDesc($event, item.name, item.desc)" layout-padding flex></md-text-float>
-			</div>
-		</div>
-	</form>
-</md-content>
-
-<md-toolbar md-theme="grey">
-	<h2 class="md-toolbar-tools">{{checklistItems.listManagement.name}}</h2>
-</md-toolbar>
-<md-content class="md-padding">
-	<form>
-		<div layout="row">
-			<div ng-repeat="item in checklistItems.listManagement.subItems">
-				<md-text-float label="{{item.name}}" ng-model="item.model" ng-click="showDesc($event, item.name, item.desc)" layout-padding></md-text-float>
-			</div>
-		</div>
-	</form>
-</md-content>
+<checklist-items fields="checklistItems.websiteInfo"></checklist-items>
+<checklist-items fields="checklistItems.pageTests"></checklist-items>
+<checklist-items fields="checklistItems.listManagement"></checklist-items>
 
 <md-toolbar md-theme="light-blue-dark">
 	<h2 class="md-toolbar-tools">Notes</h2>
