Added method to log checklist items to console on save

--- a/web/checklist-item.html
+++ b/web/checklist-item.html
@@ -10,4 +10,5 @@
 			</div>
 		</div>
 	</form>
+	<md-button class="md-raised md-primary" ng-controller="checklistItemsController" ng-click="saveData(fields)">Save (doesn't actually save)</md-button>
 </md-content>
