--- a/web/checklist-items.html
+++ b/web/checklist-items.html
@@ -1,16 +1,22 @@
 <md-toolbar md-theme="grey">
 	<h2 class="md-toolbar-tools">{{fields.name}}</h2>
 </md-toolbar>
-<md-content class="md-padding">
+<md-content class="md-padding" ng-controller="checklistItemsController">
 	<form>
 		<div layout="row" layout-padding layout-wrap>
 			<div ng-repeat="item in fields.items">
 				<div flex>
 					<md-tooltip class="tooltip-full-text">{{item.desc}}</md-tooltip>
 					<md-text-float label="{{item.name}}" ng-model="item.model"></md-text-float>
+					<md-checkbox ng-model="item.completed" ng-init="item.completed = checkboxOptions.completed.unchecked" ng-true-value="'{{checkboxOptions.completed.checked}}'" ng-false-value="'{{checkboxOptions.completed.unchecked}}'">
+						I {{item.completed}} this test
+					</md-checkbox>
+					<md-checkbox ng-model="item.tested" ng-init="item.tested = checkboxOptions.tested.unchecked" ng-true-value="'{{checkboxOptions.tested.checked}}'" ng-false-value="'{{checkboxOptions.tested.unchecked}}'">
+						{{item.tested}}
+					</md-checkbox>
 				</div>
 			</div>
 		</div>
 	</form>
-	<md-button class="md-raised md-primary" ng-controller="checklistItemsController" ng-click="saveData(fields)">Save (doesn't actually save)</md-button>
+	<md-button class="md-raised md-primary" ng-click="saveData(fields)">Save (doesn't actually save)</md-button>
 </md-content>
