--- a/web/login.html
+++ b/web/login.html
@@ -1,8 +1,17 @@
 <md-content class="md-padding">
-	<h2>Users</h2>
-	<p>{{users}}</p>
+	<md-text-float label="email" type="email" ng-model="user.email"></md-text-float>
+	<md-text-float label="password" type="password" ng-model="user.password"></md-text-float>
 
-	<div ng-repeat="user in users">
+	<md-button class="md-primary md-raised" ng-click="loginUser()">Login</md-button>
+
+	<h2>User</h2>
+	<p>{{userTest}}</p>
+	<p>{{userTest.name}}</p>
+
+	<h2>Users</h2>
+	<p>{{usersTest}}</p>
+
+	<div ng-repeat="user in usersTest">
 		<h3>Name</h3>
 		<p>{{user.name}}</p>
 	</div>
