Updated link for fonts

--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
 	<title>QA Checklist</title>
 	<base href="/">
 	<script src="//lol.qa-checklist.com:35729/livereload.js"></script>
-	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet'>
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,300,500,700' rel='stylesheet' type='text/css'>
 	<!-- Remove unused themes when done testing -->
 	<link rel="stylesheet" href="/css/angular-material.min.css">
 	<link rel="stylesheet" href="/css/themes/amber-theme.css">
