--- a/web/login.html
+++ b/web/login.html
@@ -1,12 +1,10 @@
 <md-content class="md-padding">
-	<md-text-float label="email" type="email" ng-model="user.email"></md-text-float>
-	<md-text-float label="password" type="password" ng-model="user.password"></md-text-float>
+	<form action="POST" ng-submit="loginUser()">
+		<md-text-float label="email" type="email" ng-model="user.email"></md-text-float>
+		<md-text-float label="password" type="password" ng-model="user.password"></md-text-float>
 
-	<md-button class="md-primary md-raised" ng-click="loginUser()">Login</md-button>
-
-	<h2>User</h2>
-	<p>{{userTest}}</p>
-	<p>{{userTest.name}}</p>
+		<md-button class="md-primary md-raised">Login</md-button>
+	</form>
 
 	<h2>Users</h2>
 	<p>{{usersTest}}</p>
