Fixed form login issue

--- a/web/login.html
+++ b/web/login.html
@@ -1,5 +1,5 @@
 <md-content class="md-padding">
-	<form action="POST" ng-submit="loginUser()">
+	<form ng-submit="loginUser()">
 		<md-text-float label="email" type="email" ng-model="user.email"></md-text-float>
 		<md-text-float label="password" type="password" ng-model="user.password"></md-text-float>
 
