Got login working and added checklists view and adjusted checklist and checklist-items to save actual data to the db

--- a/web/index.html
+++ b/web/index.html
@@ -41,6 +41,6 @@
 	<script src="/app.js"></script>
 </head>
 <body ng-app="qaChecklist">
-	<div ui-view=""></div>
+	<div ui-view="main"></div>
 </body>
 </html>
