--- a/web/checklist-items.html
+++ b/web/checklist-items.html
@@ -1,4 +1,4 @@
-<md-toolbar md-theme="grey">
+<md-toolbar>
 	<h2 class="md-toolbar-tools">{{fields.name}}</h2>
 </md-toolbar>
 <md-content class="md-padding" ng-controller="checklistItemsController">
