--- a/web/checklist.html
+++ b/web/checklist.html
@@ -1,8 +1,17 @@
-<checklist-items fields="checklistItems.websiteInfo"></checklist-items>
-<checklist-items fields="checklistItems.pageTests"></checklist-items>
-<checklist-items fields="checklistItems.listManagement"></checklist-items>
+<div md-theme="light-blue-dark">
+	<md-toolbar class="md-medium-tall">
+		<h2 class="md-toolbar-tools md-toolbar-tools-top">Checklist</h2>
+		<h3 class="md-toolbar-tools md-toolbar-tools-bottom">
+			<a ui-sref="checklists">&lt; Go Back</a>
+		</h3>
+	</md-toolbar>
+</div>
 
-<md-toolbar md-theme="light-blue-dark">
+<checklist-items fields="checklistItems.websiteInfo" md-theme="light-green"></checklist-items>
+<checklist-items fields="checklistItems.pageTests" md-theme="red"></checklist-items>
+<checklist-items fields="checklistItems.listManagement" md-theme="purple"></checklist-items>
+
+<md-toolbar>
 	<h2 class="md-toolbar-tools">Notes</h2>
 </md-toolbar>
 <md-content class="md-padding">
