--- a/web/checklist-items.html
+++ b/web/checklist-items.html
@@ -8,15 +8,16 @@
 				<div flex>
 					<md-tooltip class="tooltip-full-text">{{item.desc}}</md-tooltip>
 					<md-text-float label="{{item.name}}" ng-model="item.model"></md-text-float>
-					<md-checkbox ng-model="item.completed" ng-init="item.completed = checkboxOptions.completed.unchecked" ng-true-value="'{{checkboxOptions.completed.checked}}'" ng-false-value="'{{checkboxOptions.completed.unchecked}}'">
-						I {{item.completed}} this test
-					</md-checkbox>
-					<md-checkbox ng-model="item.tested" ng-init="item.tested = checkboxOptions.tested.unchecked" ng-true-value="'{{checkboxOptions.tested.checked}}'" ng-false-value="'{{checkboxOptions.tested.unchecked}}'">
-						{{item.tested}}
-					</md-checkbox>
+					<div ng-if="fields.tests">
+						<md-checkbox ng-model="item.completed" ng-init="item.completed = checkboxOptions.completed.unchecked" ng-true-value="'{{checkboxOptions.completed.checked}}'" ng-false-value="'{{checkboxOptions.completed.unchecked}}'">
+							I {{item.completed}} this test
+						</md-checkbox>
+						<md-checkbox ng-model="item.tested" ng-init="item.tested = checkboxOptions.tested.unchecked" ng-true-value="'{{checkboxOptions.tested.checked}}'" ng-false-value="'{{checkboxOptions.tested.unchecked}}'">
+							{{item.tested}}
+						</md-checkbox>
+					</div>
 				</div>
 			</div>
 		</div>
 	</form>
-	<md-button class="md-raised md-primary" ng-click="saveData(fields)">Save (doesn't actually save)</md-button>
 </md-content>
