--- a/web/index.html
+++ b/web/index.html
@@ -35,6 +35,7 @@
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.4/angular-aria.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.4/angular-animate.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.4/angular-resource.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.4/angular-cookies.min.js"></script>
 	<script src="https://rawgit.com/hammerjs/hammer.js/master/hammer.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.11/angular-ui-router.min.js"></script>
 	<script src="/angular-material.min.js"></script>
