--- a/web/index.html
+++ b/web/index.html
@@ -42,6 +42,7 @@
 	<script src="/app.js"></script>
 </head>
 <body ng-app="qaChecklist">
+	<div ui-view="header"></div>
 	<div ui-view="main"></div>
 </body>
 </html>
