Added placeholder to delete checklists

--- a/web/checklists.html
+++ b/web/checklists.html
@@ -7,9 +7,14 @@
 	<md-list>
 		<md-item ng-repeat="checklist in checklists">
 			<md-item-content>
+				<div class="md-tile-left">
+					<md-button class="md-fab" ng-click="deleteChecklist(checklist._id)">
+						<i class="fa fa-trash"></i>
+					</md-button>
+				</div>
 				<div class="md-tile-content">
 					<h3>
-						<a ui-sref="checklists.item({checklistId: '{{checklist._id}}'})">{{checklist.fields.websiteInfo.items[0].model || checklist.modified}}</a>
+							<a ui-sref="checklists.item({checklistId: '{{checklist._id}}'})">{{checklist.fields.websiteInfo.items[0].model || checklist.modified}}</a>
 					</h3>
 					<p>
 						{{checklist.fields.websiteInfo.items[1].model || ''}}
