Minor CSS cleanup

--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
 	<title>QA Checklist</title>
 	<base href="/">
 	<script src="//lol.qa-checklist.com:35729/livereload.js"></script>
-	<link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,300,500,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,400italic,300,500,700">
 	<!-- Remove unused themes when done testing -->
 	<link rel="stylesheet" href="/css/angular-material.min.css">
 	<link rel="stylesheet" href="/css/themes/amber-theme.css">
@@ -29,8 +29,8 @@
 	<link rel="stylesheet" href="/css/themes/red-theme.css">
 	<link rel="stylesheet" href="/css/themes/teal-theme.css">
 	<link rel="stylesheet" href="/css/themes/yellow-theme.css">
-	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-	<link href="/css/style.css" rel="stylesheet">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/css/style.css">
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.4/angular.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.4/angular-aria.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.4/angular-animate.min.js"></script>
