--- a/web/checklists.html
+++ b/web/checklists.html
@@ -5,9 +5,9 @@
 
 	<md-list>
 		<md-item ng-repeat="checklist in checklists">
-			<md-item-content>
+			<md-item-content ng-hide="checklist.isHidden">
 				<div class="md-tile-left">
-					<md-button class="md-fab" ng-click="deleteChecklist(checklist._id)">
+					<md-button class="md-fab" ng-click="deleteChecklist(checklist)">
 						<i class="fa fa-trash"></i>
 					</md-button>
 				</div>
@@ -20,7 +20,7 @@
 					</p>
 				</div>
 			</md-item-content>
-			<md-divider ng-if="!$last"></md-divider>
+			<md-divider ng-if="!$last" ng-hide="checklist.isHidden"></md-divider>
 		</md-item>
 	</md-list>
 </md-content>
