Unified theme for checklist items

--- a/web/checklist.html
+++ b/web/checklist.html
@@ -10,9 +10,9 @@
 	</md-content>
 </div>
 
-<checklist-items fields="checklistItems.websiteInfo" md-theme="light-green"></checklist-items>
-<checklist-items fields="checklistItems.pageTests" md-theme="red"></checklist-items>
-<checklist-items fields="checklistItems.listManagement" md-theme="purple"></checklist-items>
+<checklist-items fields="checklistItems.websiteInfo"></checklist-items>
+<checklist-items fields="checklistItems.pageTests"></checklist-items>
+<checklist-items fields="checklistItems.listManagement"></checklist-items>
 
 <md-toolbar>
 	<h2 class="md-toolbar-tools">Notes</h2>
